AP-23248: Add required '--add-opens' vmargs for testflows
AP-23248 (Add required --add-opens vmargs in org.knime.core.workflow.tests)